# hsMCMap

./: README.md  hsMCMAP.cabal  mc-map.cabal  test
exc-src/: Main.hs
src/: Block.hs  Main.hs  Map.hs  NBT.hs  Region.hs
src/Game/Minecraft/: .Map.hs.swp  Map.hs
src/Game/Minecraft/Map/: Block.hs  NBT.hs  Region.hs
testFile/: r.0.0.mca
testFile/1_10#/: level.dat_old
testFile/1_10#/region/: r.-1.-1.mca  r.-1.-2.mca  r.-1.0.mca  r.-2.-1.mca  r.0.-2.mca
testFile/1_10#/stats/: 1af8e16a-4423-33ca-b7af-e572161345d2.json  b5e98a20-7328-4ca9-a8c8-521a830c939b.json
testFile/testWorld/region/: r.-1.-1.mca  r.-1.-2.mca  r.-1.-3.mca  r.-1.0.mca  r.0.-1.mca  r.0.-2.mca  r.0.-3.mca  r.0.0.mca
testFile/testWorld/region2/: r.-2.-2.mca
