name:                hsMCMap
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.2.0

synopsis:            build map from minecraft region folder
homepage:            nil
license:             GPL-3
license-file:        LICENSE

author:              nalleyer,yyp

maintainer:          nalleyer@gmail.com
category:            Game

build-type:          Simple

cabal-version: >= 1.10

Flag Debug
    Description: enable debug: profiler
    Manual:      True
    Default:     False

library
  exposed-modules:     Game.Minecraft.Map, Game.Minecraft.Map.NBT, Game.Minecraft.Map.Region
  other-modules:       Game.Minecraft.Map.Block
  build-depends:       base ==4.*
                     , directory ==1.2.*
                     , containers ==0.5.*
                     , bytestring ==0.10.*
                     , zlib ==0.6.*
                     , data-binary-ieee754 ==0.4.*
                     , vector
                     , binary
                     , JuicyPixels
                     , primitive
  hs-source-dirs:      src
  default-language:    Haskell2010

executable main
  main-is:             Main.hs
  hs-source-dirs:      exc-src
  build-depends:       base == 4.*
                    ,  hsMCMap
  default-language:    Haskell2010
  GHC-Options:         -Wall -O2 -rtsopts -threaded -auto-all -caf-all -fforce-recomp -with-rtsopts=-H
  if flag(debug)
    GHC-Options:       -Wall -O2 -rtsopts -auto-all -caf-all -fforce-recomp
